--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,10 +116,10 @@ h1 {
 
 .profile-pic {
     margin: 0 auto;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 #nav {
@@ -150,6 +150,20 @@ bottom: 0;
     margin: 1px 1px;
 }
 
+.thumb{
+    position:relative;
+    overflow:hidden;
+    padding-bottom:100%;
+}
+.thumb img{
+      position: absolute;
+      max-width: 100%;
+      max-height: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+}
+
 
 /* customize nav style */
 
@@ -161,7 +175,7 @@ bottom: 0;
     height: 70px
 }
 
-.navbar-custom .navbar-nav>li>a {
+.navbar-custom .navbar-nav > li > a {
     color: #000;
 }
 
@@ -176,7 +190,7 @@ bottom: 0;
     right: 0;
 }
 
-.navbar-custom .navbar-nav>.dropdown>a .caret {
+.navbar-custom .navbar-nav > .dropdown > a .caret {
     border-top-color: #999;
     border-bottom-color: #999;
 }
@@ -280,21 +294,26 @@ section {
 }
 
 /* review css */
+
 .carousel-control.left,
 .carousel-control.right {
     background: none;
     width: 25px;
 }
+
 .carousel-control.left {
     left: -25px;
 }
+
 .carousel-control.right {
     right: -25px;
 }
+
 .broun-block {
     background: url("http://myinstantcms.ru/images/bg-broun1.jpg") repeat scroll center top rgba(0, 0, 0, 0);
     padding-bottom: 34px;
 }
+
 .block-text {
     background-color: #fff;
     border-radius: 5px;
@@ -304,6 +323,7 @@ section {
     margin-top: 27px;
     padding: 15px 18px;
 }
+
 .block-text a {
     color: #7d4702;
     font-size: 25px;
@@ -312,43 +332,53 @@ section {
     text-decoration: none;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
+
 .mark {
     padding: 12px 0;
     background: none;
 }
+
 .block-text p {
     color: #585858;
     font-family: Georgia;
     font-style: italic;
     line-height: 20px;
 }
+
 .sprite {
     background-image: url('/static/img/sprite.png');
 }
+
 .sprite-i-triangle {
     background-position: 0 -1298px;
     height: 44px;
     width: 50px;
 }
+
 .block-text ins {
     bottom: -44px;
     left: 50%;
     margin-left: -60px;
 }
+
 .block {
     display: block;
 }
+
 .zmin {
     z-index: 1;
 }
+
 .ab {
     position: absolute;
 }
+
 .person-text {
     padding: 10px 0 0;
     text-align: center;
     z-index: 2;
 }
+
 .person-text a {
     color: #ffcc00;
     display: block;
@@ -356,31 +386,37 @@ section {
     margin-top: 3px;
     text-decoration: underline;
 }
+
 .person-text i {
     color: #fff;
     font-family: Georgia;
     font-size: 13px;
 }
+
 .rel {
     position: relative;
 }
 
 /*portfolio carousel */
+
 #custom_carousel .item .top {
     overflow: hidden;
     max-height: 300px;
     margin-bottom: 15px;
 }
+
 #custom_carousel .item {
     color: #000;
     background-color: #fff;
     padding: 20px 0;
     overflow: hidden
 }
+
 #custom_carousel .item img {
     width: 100%;
     height: auto
 }
+
 #custom_carousel .izq {
     position: absolute;
     left: -25px;
@@ -395,6 +431,7 @@ section {
 }
 
 /* Next button  */
+
 #custom_carousel .der {
     position: absolute;
     right: -25px !important;
@@ -408,6 +445,7 @@ section {
     width: 40px;
     margin-top: 30px;
 }
+
 #custom_carousel .controls {
     width: 100%;
     overflow: hidden;
@@ -419,6 +457,7 @@ section {
     background: #fff;
     border: 0;
 }
+
 #custom_carousel .controls .nav {
     padding: 0;
     margin: 0;
@@ -429,6 +468,7 @@ section {
     width: auto;
     border: 0;
 }
+
 #custom_carousel .controls li {
     transition: all .5s ease;
     display: inline-block;
@@ -437,18 +477,22 @@ section {
     opacity: .5;
     -webkit-filter: grayscale(1);
 }
+
 #custom_carousel .controls li a {
     padding: 0;
 }
+
 #custom_carousel .controls li img {
     width: 100%;
     height: auto
 }
+
 #custom_carousel .controls li.active {
     background-color: #fff;
     opacity: 1;
     -webkit-filter: grayscale(0);
 }
+
 #custom_carousel .controls a small {
     overflow: hidden;
     display: block;
@@ -458,6 +502,7 @@ section {
 }
 
 /*Modal*/
+
 body.modal-open #wrap {
     -webkit-filter: blur(7px);
     -moz-filter: blur(15px);
@@ -465,29 +510,34 @@ body.modal-open #wrap {
     -ms-filter: blur(15px);
     filter: blur(15px);
 }
+
 .modal-backdrop {
     background: #f7f7f7;
 }
+
 .close {
     font-size: 50px;
     display: block;
 }
 
 /* Modal Gallery */
+
 .hide-bullets {
     list-style: none;
     margin-left: -40px;
     margin-top: 20px;
 }
+
 .thumbnail {
     padding: 0;
 }
-.carousel-inner>.item>img,
-.carousel-inner>.item>a>img {
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
     width: 100%;
 }
 
-.custom-gallery{
+.custom-gallery {
     margin-left: 0;
 }
 
