--- a/static/css/main.css
+++ b/static/css/main.css
@@ -251,7 +251,7 @@ section {
 }
 
 .bg-1 {
-    background: url('https://images.pexels.com/photos/256737/pexels-photo-256737.jpeg') no-repeat center center fixed;
+    background: url('../img/index/h3.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -259,7 +259,7 @@ section {
 }
 
 .bg-2 {
-    background: url('https://images.pexels.com/photos/206434/pexels-photo-206434.jpeg') no-repeat center center fixed;
+    background: url('../img/index/h1.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -267,7 +267,7 @@ section {
 }
 
 .bg-3 {
-    background: url('https://images.pexels.com/photos/116021/pexels-photo-116021.jpeg') no-repeat center center fixed;
+    background: url('../img/index/h2.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -283,7 +283,7 @@ section {
 }
 
 .bg-5 {
-    background: url('https://images.pexels.com/photos/248159/pexels-photo-248159.jpeg') no-repeat center center fixed;
+    background: url('../img/index/h1.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -543,4 +543,134 @@ body.modal-open #wrap {
 
 .gallery-row {
     margin-top: 50px;
+}
+
+/* Contact Card Tabbed */
+
+/* USER PROFILE PAGE */
+ .card {
+    margin-top: 20px;
+    padding: 30px;
+    background-color: rgba(214, 224, 226, 0.2);
+    -webkit-border-top-left-radius:5px;
+    -moz-border-top-left-radius:5px;
+    border-top-left-radius:5px;
+    -webkit-border-top-right-radius:5px;
+    -moz-border-top-right-radius:5px;
+    border-top-right-radius:5px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.card.hovercard {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+    text-align: center;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 1);
+}
+.card.hovercard .card-background {
+    height: 130px;
+}
+.card-background img {
+    -webkit-filter: blur(25px);
+    -moz-filter: blur(25px);
+    -o-filter: blur(25px);
+    -ms-filter: blur(25px);
+    filter: blur(25px);
+    margin-left: -100px;
+    margin-top: -200px;
+    min-width: 130%;
+}
+.card.hovercard .useravatar {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .useravatar img {
+    width: 100px;
+    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
+}
+.card.hovercard .card-info {
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .card-info .card-title {
+    padding:0 5px;
+    font-size: 20px;
+    line-height: 1;
+    color: #262626;
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.card.hovercard .card-info {
+    overflow: hidden;
+    font-size: 12px;
+    line-height: 20px;
+    color: #737373;
+    text-overflow: ellipsis;
+}
+.card.hovercard .bottom {
+    padding: 0 20px;
+    margin-bottom: 17px;
+}
+.btn-pref .btn {
+    -webkit-border-radius:0 !important;
+}
+
+/* Social Media */
+
+.twitter-hover {
+    background-image: url('https://lut.im/SRoUJUn7V4/cORSlFIVBlR7M8Zv.png');
+}
+.facebook-hover {
+    background-image: url('https://lut.im/9LlTfOBMjB/ccPwdiudyoF3x1wE.png');
+}
+.google-hover {
+    background-image: url('https://lut.im/qGelLnYHZ3/dL1Hrnzyl7cMz14e.png');
+}
+.linkedin-hover {
+    background-image: url('https://lut.im/JNIybEyJDx/6gAE6YPt35e7qMAB.png');
+}
+.pinterest-hover {
+    background-image: url('https://lut.im/fU1GnJ1cOw/d0iRmklZgk2l6o5W.png');
+}
+.instagram-hover {
+    background-image: url('https://lut.im/0LARg4VaCM/bWRJ8RbjK0r14RdO.png');
+}
+.tumblr-hover {
+    background-image: url('https://lut.im/wJDqfDmhLL/YZoci8VwKz37qwv4.png');
+}
+.reddit-hover {
+    background-image: url('https://lut.im/zfzy0kvZKw/BJBLoz6FyoLLFZGg.png');
+}
+.stumbleupon-hover {
+    background-image: url('https://lut.im/sdOPL3LP6d/VMRYTaE6cZxHa3Hq.png');
+}
+.social-slide {
+	height: 48px;
+	width: 48px;
+	margin: auto;
+    margin-bottom: 10px;
+	-webkit-transition: all ease 0.3s;
+	-moz-transition: all ease 0.3s;
+	-o-transition: all ease 0.3s;
+	-ms-transition: all ease 0.3s;
+	transition: all ease 0.3s;
+}
+.social-slide:hover {
+	background-position: 0px -48px;
+	box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
 }
